@startuml

title __USERS's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.users {
      abstract class es.ull.patrones.users.User {
          - name : String
          + User()
          {abstract} + cancelRegisterNotify()
          {abstract} + messageNotify()
          {abstract} + registerNotify()
          {abstract} + sendMessage()
          {abstract} + sendMessage()
          + toString()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.users {
      class es.ull.patrones.users.UserConcrete {
          + UserConcrete()
          + cancelRegisterNotify()
          + messageNotify()
          + registerNotify()
          + sendMessage()
          + sendMessage()
      }
    }
  }
  

  es.ull.patrones.users.User o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.users.UserConcrete -up-|> es.ull.patrones.users.User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
